--- a/MyProfile/StoryBoards/Base.lproj/Main.storyboard
+++ b/MyProfile/StoryBoards/Base.lproj/Main.storyboard
@@ -26,7 +26,7 @@
                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="vh8-dY-XoL">
                                                 <rect key="frame" x="0.0" y="0.0" width="240" height="34"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                <textInputTraits key="textInputTraits" autocorrectionType="no"/>
+                                                <textInputTraits key="textInputTraits" autocorrectionType="no" returnKeyType="next"/>
                                             </textField>
                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="H4c-Ri-tyr">
                                                 <rect key="frame" x="0.0" y="50" width="240" height="34"/>
@@ -40,6 +40,9 @@
                                         <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                         <state key="normal" title="Log In"/>
+                                        <connections>
+                                            <action selector="login" destination="BYZ-38-t0r" eventType="touchUpInside" id="xWg-4Y-Lon"/>
+                                        </connections>
                                     </button>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="cZH-X8-LWf">
                                         <rect key="frame" x="0.0" y="152" width="240" height="28"/>
@@ -49,12 +52,18 @@
                                                 <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                 <state key="normal" title="Forgot Username?"/>
+                                                <connections>
+                                                    <action selector="forgot:" destination="BYZ-38-t0r" eventType="touchUpInside" id="2jT-ba-bDh"/>
+                                                </connections>
                                             </button>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AgD-ZH-zli">
+                                            <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AgD-ZH-zli">
                                                 <rect key="frame" x="126.5" y="0.0" width="113.5" height="28"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                 <state key="normal" title="Forgot Password?"/>
+                                                <connections>
+                                                    <action selector="forgot:" destination="BYZ-38-t0r" eventType="touchUpInside" id="qQ1-U5-P59"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                     </stackView>
@@ -69,15 +78,20 @@
                             <constraint firstItem="Ita-TQ-43h" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="-35" id="atq-e6-VSH"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="passTF" destination="H4c-Ri-tyr" id="jNk-Dq-X8n"/>
+                        <outlet property="userTF" destination="vh8-dY-XoL" id="7o2-fr-zHr"/>
+                        <segue destination="a1j-os-Uua" kind="presentation" identifier="openWelcomeVC" modalPresentationStyle="fullScreen" id="msd-xs-f6l"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="132" y="116"/>
         </scene>
-        <!--View Controller-->
+        <!--Welcome View Controller-->
         <scene sceneID="igA-B3-emx">
             <objects>
-                <viewController id="a1j-os-Uua" sceneMemberID="viewController">
+                <viewController id="a1j-os-Uua" customClass="WelcomeViewController" customModule="MyProfile" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="VKZ-pQ-9b2">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -107,6 +121,9 @@
                                         <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                         <state key="normal" title="Log Out"/>
+                                        <connections>
+                                            <segue destination="LDg-0u-jJX" kind="unwind" unwindAction="unwindSegueWithSegue:" id="6uX-VN-9Cx"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                             </stackView>
@@ -118,8 +135,12 @@
                             <constraint firstItem="4z2-lt-88H" firstAttribute="centerY" secondItem="VKZ-pQ-9b2" secondAttribute="centerY" id="DGg-b5-D0r"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="welcomeLable" destination="Lbe-uh-7sk" id="NTv-kV-cdT"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0z6-e0-weC" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <exit id="LDg-0u-jJX" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="840" y="115"/>
         </scene>
