--- a/MyProfile/StoryBoards/Base.lproj/Main.storyboard
+++ b/MyProfile/StoryBoards/Base.lproj/Main.storyboard
@@ -41,7 +41,7 @@
                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                         <state key="normal" title="Log In"/>
                                         <connections>
-                                            <action selector="login" destination="BYZ-38-t0r" eventType="touchUpInside" id="xWg-4Y-Lon"/>
+                                            <action selector="loginButtonPress" destination="BYZ-38-t0r" eventType="touchUpInside" id="xWg-4Y-Lon"/>
                                         </connections>
                                     </button>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="cZH-X8-LWf">
@@ -79,8 +79,8 @@
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="passTF" destination="H4c-Ri-tyr" id="jNk-Dq-X8n"/>
-                        <outlet property="userTF" destination="vh8-dY-XoL" id="7o2-fr-zHr"/>
+                        <outlet property="passwordTextField" destination="H4c-Ri-tyr" id="jNk-Dq-X8n"/>
+                        <outlet property="usernameTextField" destination="vh8-dY-XoL" id="7o2-fr-zHr"/>
                         <segue destination="a1j-os-Uua" kind="presentation" identifier="openWelcomeVC" modalPresentationStyle="fullScreen" id="msd-xs-f6l"/>
                     </connections>
                 </viewController>
